// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tests renders the Tabs component 1`] = `
<div>
  <div
    class="tabs"
    role="tablist"
  >
    <div
      class="react-horizontal-scrolling-menu--wrapper border-base-lighter border-bottom margin-top-1"
    >
      <div
        class="react-horizontal-scrolling-menu--scroll-container "
      >
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="0"
          data-key="tab1"
        >
          <div
            aria-label="Active tab1test Tab Tab 1"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md tab-active "
            role="tab"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator "
          data-index="0.1"
          data-key="tab1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="1"
          data-key="tab2"
        >
          <div
            aria-label="tab1test Tab Tab 2"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
            role="tab"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="tab-content"
      role="tabpanel"
    >
      Tab 1
    </div>
  </div>
</div>
`;

exports[`Tabs tests renders the Tabs component with default tab 2 selected 1`] = `
<div>
  <div
    class="tabs"
    role="tablist"
  >
    <div
      class="react-horizontal-scrolling-menu--wrapper border-base-lighter border-bottom margin-top-1"
    >
      <div
        class="react-horizontal-scrolling-menu--scroll-container "
      >
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="0"
          data-key="tab1"
        >
          <div
            aria-label="tab2test Tab Tab 1"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
            role="tab"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator "
          data-index="0.1"
          data-key="tab1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="1"
          data-key="tab2"
        >
          <div
            aria-label="Active tab2test Tab Tab 2"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md tab-active "
            role="tab"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="tab-content"
      role="tabpanel"
    >
      Tab 2
    </div>
  </div>
</div>
`;
